--- a/Proposal/ijcai15- feature generation by recursive induction.tex
+++ b/Proposal/ijcai15- feature generation by recursive induction.tex
@@ -36,7 +36,7 @@
 \maketitle
 
 \begin{abstract}
-  Induction algorithms have steadily improved over the years, resulting in powerful methods for learning. However, these methods are constrained to use knowledge within the supplied feature vectors. Recently, a large collection of common-sense, domain specific knowledge bases have become available on the web. The natural question is how these knowledge bases can be exploited by existing induction algorithms.
+  Induction algorithms have steadily improved over the years, resulting in powerful methods for learning. However, these methods are constrained to use knowledge within the supplied feature vectors. Recently, a large collection of common-sense and domain specific relational knowledge bases have become available on the web. The natural question is how these knowledge bases can be exploited by existing induction algorithms.
   In this work we propose a novel algorithm for using relational data to generate recursive features. Given a feature, the algorithm recursively defines a new learning task over its set of values, and uses the relational data to construct feature vectors for the new task. The resulting classifier is then added as a new feature.
   We have applied our algorithm to the domain of text categorization, using large semantic knowledge bases such as YAGO. We have shown that generated recursive features significantly improve the performance of existing induction algorithms.
 \end{abstract}
@@ -51,8 +51,8 @@ In many real-world applications, however, the given set of features is not suffi
 
 One approach for overcoming the difficulty resulting from an insufficiently expressive set of features, is to generate new features.  Most feature generation algorithms produce new features by combining the original ones in various ways.  For example, the LFC algorithm \citep{ragavan1993complex} combines the original feature using logical operators.  The LDMT algorithm \citep{utgo1991linear} uses linear combinations of the original features to construct more informative ones.  The FICUS algorithm \citep{markovitch2002feature} presents a general framework for using any set of constructors to combine features.
 
-While feature combination has proven to enhance the performance of induction algorithms, there are many cases where a mere combination of existing features is not enough.  To that extent, a different approach for generating features has been devised.  This approach aims to incorporate additional knowledge from external sources in order to construct new and informative features.
-\citet{gabrilovich2009wikipedia} for example, present a method for generating features that are based on Wikipedia concepts. \citet{jarmasz2012roget} presents a method for utilizing lexical links between words to generate features.
+While feature combination has proven to enhance the performance of induction algorithms, there are many cases where a mere combination of existing features is not enough. A new approach aims to incorporate additional knowledge from external sources in order to construct new and informative features.
+\citet{gabrilovich2009wikipedia} ,for example, present a method for generating features that are based on Wikipedia concepts. \citet{jarmasz2012roget} presents a method for utilizing lexical links between words to generate features.
 
 In recent years, a new resource in the form of Semantic Linked Data has begun to take form, as part of the Semantic Web project (see survey, \citet{bizer2009linked}). This resource has led to the creation of several new approaches designed to utilize the new, ontology-based representation of knowledge \citep{losch2012graph,rios2014statistical}.
 It should come as no surprise then, that there have been several efforts in utilizing Linked Data for unsupervised feature generation \citep{cheng2011automated, paulheim2012unsupervised}. 
@@ -201,54 +201,58 @@ We have evaluated our method on the TechTC-100 collection \citep{gabrilovich2004
 %expand?
 As a knowledge base, we used YAGO2 \citep{hoffart2013yago2}, omitting any relations with literal data such as dates or geographic coordinates. This served as a "common knowledge" database. We also made limited use of type information within the database.
 
-We ran our feature generation algorithm for both depth 1, i.e., creating a recursive learning problem for the original problem, as well as depth 2, creating recursive learning problems for the original problem and the first order recursive problem.
+We ran our feature generation algorithm for both a depth of one, creating a recursive learning problem for the original problem, and a depth  of two, creating recursive learning problems for the original problem and the first order recursive problem.
 
-We compared the new set of features (our new features combined with standard binary bag-of-words features) to the original binary bag-of-words features at various feature selection levels. We used information gain as the feature selection criterion.
+We compared the new set of features (our new features combined with the original features) to the binary bag-of-words features at various feature selection levels. We used information gain as the feature selection criterion.
 
 \subsection{Results}
 %results, specific examples (qualative analysis), explaining it and so on
-Figure \ref{fig:accuracy} shows the average accuracy across all datasets within techTC-100 over various feature selection levels. We show our method for both depths, compared to the non-relational case.  The left graph shows the accuracy using K-Nearest Neighbours \citep{fix1951discriminatory} as our classifier ($K=1$) and the right graph shows the accuracy using SVM \citep{cortes1995support} as our classifier (Linear kernel, $C=100$). Results ran using CART \citep{steinberg2009cart} as a classifier (requiring a consistent tree) yielded no discernible pattern of improvement or decrease in performance, except in very low feature selection levels, where there is a statistically significance decrease in accuracy $ (p<0.05) $.
+Figure \ref{fig:accuracy} shows the average accuracy across all datasets within techTC-100 for various feature selection levels. We compare the baseline features to a combined pool of the original and generated features. The left graph shows the accuracy using K-Nearest Neighbours \citep{fix1951discriminatory} as our classifier ($K=1$) and the right graph shows the accuracy using SVM \citep{cortes1995support} as our classifier (Linear kernel, $C=100$). Results ran using CART \citep{steinberg2009cart} as a classifier (requiring a consistent tree) yielded no discernible pattern of improvement or decrease in performance, except in very low feature selection levels, where there is a significance decrease in accuracy $ (p<0.05) $.
 
-We see that the one-level application is better than the simple bag-of-words approach, and the two-level application yields a further improvement. We witness this for both algorithms, especially in high (over $20\%$) feature selection levels. This is slightly more apperant for SVM based classification, as the impact of a few powerful features is easier to identify. Both levels achieve a statistically significant improvement $ (p<0.05) $ over the simple bag-of-words approach for multiple feature selection levels. For instance, when taking $20\% $ of the features, we see a statistically significant improvement for both KNN and SVM classification accuracies (using a paired-t-test).  
-Furthermore, for SVM, there is a statistically significant improvement between the first and second levels at a $0.75\%$ feature selection level. For KNN, there is a statistically significant improvement between the levels for feature selection levels in the range $60\%-80\%$, but there is only statistically significant improvement between the second level and the baseline approach for a feature selection level of $70\%$
+We see that the depth one application is better than the bag-of-words approach, and the depth two application yields a further improvement. We witness this for both algorithms, especially in high (over $20\%$) feature selection levels. This is slightly more apparent for SVM-based classification. Both depths achieve a significant improvement $ (p<0.05) $ over the bag-of-words approach for multiple feature selection levels. For instance, when taking $20\% $ of the features, we see a statistically significant improvement for both KNN and SVM classification accuracies (using a paired-t-test).  
+Furthermore, for SVM we see a significant improvement between the first and second depths at a $0.75\%$ feature selection level. For KNN, there is a statistically improvement between the depths for feature selection levels in the range $60\%-80\%$, though the depth two application is only significantly better than the baseline approach for a feature selection level of $70\%$
 
-Figure \ref{fig:accuracy_low} shows the average accuracy across all datasets within techTC-100 over very low feature selection levels. 
-We see that in lower feature selection levels the effect generally diminishes for both classifier types, as some of the generated features are filtered out by the feature selection process. The lowest feature selection level at which we found a statistically significant improvement is $0.75\%$ for SVM, and $15\%$ for KNN.
+Figure \ref{fig:accuracy_low} shows the average accuracy across all datasets within techTC-100 for very low feature selection levels. 
+We see that in lower feature selection levels the effect generally diminishes for both classifier types, as some of the generated features are filtered out by the feature selection process. The lowest feature selection levels at which we found a significant improvement are $0.75\%$ for SVM and $15\%$ for KNN.
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
 	\includegraphics[width=\linewidth]{acc2.pdf}
 	\caption{Average accuracy across all 100 datasets for various feature selection levels. Left side: KNN, Right side: SVM}
 	\label{fig:accuracy}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
 	\includegraphics[width=\linewidth]{acc_low2.pdf}
 	\caption{Average accuracy across all 100 datasets for very low feature selection levels. Left side: KNN, Right side: SVM}
 	\label{fig:accuracy_low}
 \end{figure}
 
-We note that due to the conservative feature generation process, very few features are generated: in nearly half of the datasets within techTC-100, no features are generated at all, and in no single dataset is the number of features greater than six. We also note that all generated features arise from local contexts, i.e, when looking at the entire dataset we would have difficulty identifying these features as especially useful. A more careful look at datasets where no features are generated reveals that they tend to have more relations where there are only very few objects in the newly generated problem. Since we only sample some of the possible relations to attempt feature generation, this is a major factor in the amount of features generated in general, as well as part of the reason why no features are generated for some datasets. Experiments with lowering the amount of sampled relations shows a noticeable decrease in both number of generated features and mean increase in accuracy compared to the baseline approach.
+We note that due to the conservative feature generation process, very few features are generated: in nearly half of the datasets within techTC-100, no features are generated at all, and in no single dataset is the number of features greater than six. We also note that most generated features arise from local contexts, i.e, when looking at the entire dataset we would have difficulty identifying these features as especially useful. 
 
-Figure \ref{fig:ratios} shows the mean ratio between the accuracy of the base approach and the relational approach, and figures \ref{fig:ratios_max} and \ref{fig:ratios_min} show the minimal and maximal ratios accordingly. We note that while the average improvement in accuracy is not large (due to many datasets where no features are generated), we can often achieve a $20\%-25\%$ increase, and potentially reach as much as a $40\%$ increase in accuracy for some datasets within TechTC-100. We also note that it is possible to have a decrease in accuracy, but we note that for most cases, especially when using SVM as the classification method, we can limit it to no more than a $10\%$ decrease. We also note that the level one application tends to be more conservative than the two level approach, yielding a lower average improvement and maximal improvement, but also a lower decrease in the worst cases.
-Results for CART show once again that the level one application tends to be more conservative. There is no clear trend regarding the mean ratios, and shows a much higher variance in terms of minimal and maximal ratios, offering as much as a $30\%$ difference in either direction.
+A more careful look at datasets where no features are generated reveals that they tend to result in a larger number of highly sparse recursive learning problems. Since we only sample some of the possible problems to attempt feature generation, this is a major factor in the amount of features generated in general, as well as part of the reason why no features are generated for some datasets. Experiments in lowering the amount of sampled relations show a noticeable decrease in both the number of generated features and the mean increase in accuracy compared to results discussed above.
 
-\begin{figure}[H]
+Figure \ref{fig:ratios} shows the mean ratio between the accuracy of the base approach and our recursive approach across all 100 datasets, and figures \ref{fig:ratios_max} and \ref{fig:ratios_min} show the minimal and maximal ratios accordingly. We note that while the average improvement in accuracy is not large (due to many datasets where no features are generated), we can often achieve a $20\%-25\%$ increase, and potentially reach as much as a $40\%$ increase in accuracy for some datasets within TechTC-100. We also note that it is possible to have a decrease in accuracy, but that for most cases, especially when using SVM as the classification method, we can limit it to no more than a $10\%$ decrease. 
+
+We also note that the depth one application tends to be more conservative than a depth two approach, yielding a lesser improvement on average and in the best case, but also a offers a more measured decrease in the worst cases.
+Results for CART reaffirm this notion. However, there is no clear trend regarding the mean ratios, and there is a much higher variance in terms of minimal and maximal ratios, offering as much as a $30\%$ difference in either direction.
+
+\begin{figure}[]
 	\centering
 	\includegraphics[width=\linewidth]{ratios2.pdf}
 	\caption{Average accuracy ratio across all 100 datasets for various feature selection levels. Left side: KNN, Right side: SVM}
 	\label{fig:ratios}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
 	\includegraphics[width=\linewidth]{ratios_max2.pdf}
 	\caption{Maximum accuracy ratio across all 100 datasets for various feature selection levels. Left side: KNN, Right side: SVM}
 	\label{fig:ratios_max}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
 	\includegraphics[width=\linewidth]{ratios_min2.pdf}
 	\caption{Minimum accuracy ratio across all 100 datasets for various feature selection levels. Left side: KNN, Right side: SVM}
@@ -259,34 +263,34 @@ Results for CART show once again that the level one application tends to be more
 \subsection{Qualitative Analysis}
 In order to better understand the contribution of these features, let us look at several of them to try and better understand them. Figure \ref{fig:level1_good} shows one of the features generated for single level feature generation. We can see that the feature attempts to separate based on geographical location. Figure \ref{fig:level1_simple} shows a simple feature regarding people, and showcases the fact that when there is no need for overly complex features, our technique will not force such features. This feature yields a $10\%-15\%$ increase in accuracy (depending on feature selection level), and is generated by both the single and two level approaches.
 
-Figure \ref{fig:level2_tree} showcases the additional power of the level two approach. The second level learning problem separates non-countries from countries, as well as countries which deal with Arabic nations who are not fuel manufactures from those who embargo them.
+Figure \ref{fig:level2_tree} showcases the additional power of the level two approach. The second level learning problem separates non-countries from countries, as well as countries which deal with non fuel manufacturing Arabic nations from those who embargo them.
 
 Figure \ref{fig:weird_trees} showcases some of the unique oddities of using our technique with the YAGO2 knowledge base. Since YAGO groups together all entities which have a grammatical gender (including fictional characters and non-living objects) under a single relation, the constructed feature looks at both deceased individuals and words that are the same as Australian television channels (such as Gold and Galaxy) at the same time. 
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
-	\includegraphics[width=\linewidth]{level1_good.pdf}
+	\includegraphics[width=0.8 \linewidth]{level1_good.pdf}
 	\caption{A single level feature regarding nations and organizations with official websites}
 	\label{fig:level1_good}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
-	\includegraphics[width=\linewidth]{level1_simple.pdf}
+	\includegraphics[width=0.6 \linewidth]{level1_simple.pdf}
 	\caption{A single level feature regarding people (real or fictional)}
 	\label{fig:level1_simple}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
 	\includegraphics[width=\linewidth]{level2_tree.pdf}
 	\caption{A two level feature regarding countries and organizations}
 	\label{fig:level2_tree}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}[]
 	\centering
-	\includegraphics[width=\linewidth]{weird_trees.pdf}
+	\includegraphics[width=0.6 \linewidth]{weird_trees.pdf}
 	\caption{A single level feature regarding things with a grammatical gender}
 	\label{fig:weird_trees}
 \end{figure}
