--- a/Proposal/document.bib
+++ b/Proposal/document.bib
@@ -649,3 +649,10 @@ pages = {331-339}
 	pages={443--498},
 	year={2009}
 }
+
+@book{breiman1984classification,
+	title={Classification and regression trees},
+	author={Breiman, Leo and Friedman, Jerome and Stone, Charles J and Olshen, Richard A},
+	year={1984},
+	publisher={CRC press}
+}
